--- a/mysql-pv.yaml
+++ b/mysql-pv.yaml
@@ -1,3 +1,4 @@
+# Followig configuration is applicable for kubeadm host storage and not allowed in production
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -19,7 +20,6 @@ spec:
               operator: In
               values:
                 - w1
-
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -42,7 +42,6 @@ spec:
               operator: In
               values:
                 - w2
-
 ---
 apiVersion: v1
 kind: PersistentVolume
