--- a/mysql/datahub-mysql-secrets.yaml
+++ b/mysql/datahub-mysql-secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
- name: mysqlpwd
- namespace: datahub
+  name: mysqlpwd
+  namespace: datahub
+type: Opaque
 data:
- password: RDRCQjNBOUFGQzQ1RDIxMAo=
+  password: RDRCQjNBOUFGQzQ1RDIxMAo=
