DataHub, Kafka and DB Manifest updated

--- a/datahub-app/datahub-frontend-deploy.yaml
+++ b/datahub-app/datahub-frontend-deploy.yaml
@@ -21,13 +21,13 @@ spec:
           envFrom:
             - configMapRef:
                 name: datahub-frontend-config
-          resources:
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
+          resources: {}
+            # limits:
+            #   memory: "1Gi"
+            #   cpu: "500m"
+            # requests:
+            #   memory: "512Mi"
+            #   cpu: "250m"
           readinessProbe:
             tcpSocket:
               port: 9002
