--- a/datahub-app/datahub-mae-consumer-deploy.yaml
+++ b/datahub-app/datahub-mae-consumer-deploy.yaml
@@ -19,10 +19,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: datahub-mae-consumer-config
-          resources:
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
+          resources: {}
+            # limits:
+            #   memory: "1Gi"
+            #   cpu: "500m"
+            # requests:
+            #   memory: "512Mi"
+            #   cpu: "250m"
