--- a/datahub-app/datahub-upgrade-deploy.yaml
+++ b/datahub-app/datahub-upgrade-deploy.yaml
@@ -22,10 +22,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: datahub-upgrade-config
-          resources:
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
+          resources: {}
+            # limits:
+            #   memory: "1Gi"
+            #   cpu: "500m"
+            # requests:
+            #   memory: "512Mi"
+            #   cpu: "250m"
