DataHub, Kafka and DB Manifest updated

--- a/kafka/kafka-stateful-set.yaml
+++ b/kafka/kafka-stateful-set.yaml
@@ -51,11 +51,12 @@ spec:
         name: kafka-data
         namespace: datahub
       spec:
+        storageClassName: sc-local
         accessModes:
           - ReadWriteOnce
         resources:
           requests:
-            storage: 1Gi
+            storage: 2Gi
 ---
 apiVersion: v1
 kind: Service
