--- a/kafka/kafka-stateful-set.yaml
+++ b/kafka/kafka-stateful-set.yaml
@@ -29,17 +29,17 @@ spec:
           - containerPort: 9092
         env:
           - name: KAFKA_ADVERTISED_LISTENERS
-            value: "INTERNAL://:29092,LISTENER_EXTERNAL://:9092"
+            value: "INTERNAL://:29092,EXTERNAL://:9092"
           - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
             value: "true"
           - name: KAFKA_INTER_BROKER_LISTENER_NAME
             value: "INTERNAL"
           - name: KAFKA_LISTENERS
-            value: "INTERNAL://:29092,LISTENER_EXTERNAL://:9092"
+            value: "INTERNAL://:29092,EXTERNAL://:9092"
           - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-            value: "INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT"
+            value: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
           - name: KAFKA_ZOOKEEPER_CONNECT
-            value: "zookeeper:2181"
+            value: "zookeeper-0.zookeeper.datahub.svc.cluster.local:2181"
         resources: {}
         volumeMounts:
           - mountPath: /var/lib/kafka/
