--- a/kafka/zookeeper-stateful-set.yaml
+++ b/kafka/zookeeper-stateful-set.yaml
@@ -38,7 +38,7 @@ spec:
           resources:
             limits:
               cpu: "500m"
-              memory: 2Gi
+              memory: 200Mi
             requests:
               cpu: 200m
               memory: 100Mi
