--- a/kafka/kafka-statefulset.yaml
+++ b/kafka/kafka-statefulset.yaml
@@ -3,6 +3,7 @@ kind: StatefulSet
 metadata:
   labels:
     service: kafka
+    app: kafka
   name: kafka
   namespace: datahub
 spec:
@@ -23,7 +24,7 @@ spec:
       containers:
       - name: kafka
         imagePullPolicy: IfNotPresent
-        image: confluentinc/cp-kafka:7.3.2
+        image: confluentinc/cp-kafka:7.8.0
         ports:
           - containerPort: 29092
           - containerPort: 9092
@@ -39,7 +40,7 @@ spec:
           - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
             value: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
           - name: KAFKA_ZOOKEEPER_CONNECT
-            value: "zookeeper-0.zookeeper.datahub.svc.cluster.local:2181"
+            value: "zookeeper.datahub.svc.cluster.local:2181"
         resources: {}
         volumeMounts:
           - mountPath: /var/lib/kafka/
