--- a/kafka-pv.yaml
+++ b/kafka-pv.yaml
@@ -64,3 +64,28 @@ spec:
               operator: In
               values:
                 - w3
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: kafka-pv
+spec:
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: sc-local
+  local:
+    path: /mnt/data/kafka
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - w1
+                - w2
+                - w3
