--- a/datahub-app/datahub-gms-configmap.yaml
+++ b/datahub-app/datahub-gms-configmap.yaml
@@ -5,11 +5,16 @@ metadata:
   namespace: datahub
 data:
   DATAHUB_UPGRADE_HISTORY_KAFKA_CONSUMER_GROUP_ID: "generic-duhe-consumer-job-client-gms"
+  # If using postgres
+  EBEAN_DATASOURCE_HOST: postgres:5432
+  EBEAN_DATASOURCE_URL: jdbc:postgresql://postgres.datahub.svc.cluster.local:5432/datahub
+  EBEAN_DATASOURCE_DRIVER: org.postgresql.Driver
   EBEAN_DATASOURCE_USERNAME: "datahub"
   EBEAN_DATASOURCE_PASSWORD: "datahub"
-  EBEAN_DATASOURCE_HOST: "mysql:3306"
-  EBEAN_DATASOURCE_URL: "jdbc:mysql://mysql:3306/datahub?verifyServerCertificate=false&useSSL=true&useUnicode=yes&characterEncoding=UTF-8&enabledTLSProtocols=TLSv1.2"
-  EBEAN_DATASOURCE_DRIVER: "com.mysql.jdbc.Driver"
+  # If using MYSQL/MARIADB
+  #EBEAN_DATASOURCE_HOST: "mysql:3306"
+  #EBEAN_DATASOURCE_URL: "jdbc:mysql://mysql:3306/datahub?verifyServerCertificate=false&useSSL=true&useUnicode=yes&characterEncoding=UTF-8&enabledTLSProtocols=TLSv1.2"
+  #EBEAN_DATASOURCE_DRIVER: "com.mysql.jdbc.Driver"
   KAFKA_BOOTSTRAP_SERVER: "kafka-0.kafka.datahub.svc.cluster.local:29092"
   KAFKA_SCHEMAREGISTRY_URL: "http://schema-registry.schema-registry.datahub.svc.cluster.local:8081"
   ELASTICSEARCH_HOST: "elasticsearch-0.elasticsearch.datahub.svc.cluster.local"
@@ -17,13 +22,9 @@ data:
   ES_BULK_REFRESH_POLICY: "WAIT_UNTIL"
   ELASTICSEARCH_INDEX_BUILDER_SETTINGS_REINDEX: "true"
   ELASTICSEARCH_INDEX_BUILDER_MAPPINGS_REINDEX: "true"
-  NEO4J_HOST: "http://neo4j:7474"
-  NEO4J_URI: "bolt://neo4j"
-  NEO4J_USERNAME: "neo4j"
-  NEO4J_PASSWORD: "datahub"
   JAVA_OPTS: "-Xms1g -Xmx1g"
   GRAPH_SERVICE_DIFF_MODE_ENABLED: "true"
-  GRAPH_SERVICE_IMPL: "neo4j"
+  GRAPH_SERVICE_IMPL: "elasticsearch"
   ENTITY_REGISTRY_CONFIG_PATH: "/datahub/datahub-gms/resources/entity-registry.yml"
   ENTITY_SERVICE_ENABLE_RETENTION: "true"
   MAE_CONSUMER_ENABLED: "true"
