--- a/datahub-app/helm-chart/datahub-elasticsearch-setup-job.yaml
+++ b/datahub-app/helm-chart/datahub-elasticsearch-setup-job.yaml
@@ -1,23 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  annotations:
-    batch.kubernetes.io/job-tracking: ""
-    helm.sh/hook: pre-install,pre-upgrade
-    helm.sh/hook-delete-policy: before-hook-creation
-    helm.sh/hook-weight: "-5"
-  creationTimestamp: "2025-02-09T10:31:06Z"
-  generation: 1
   labels:
-    app.kubernetes.io/instance: datahub
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: datahub
-    app.kubernetes.io/version: 0.14.1
-    helm.sh/chart: datahub-0.4.27
+    app: datahub-elasticsearch-setup-job
   name: datahub-elasticsearch-setup-job
   namespace: datahub
-  resourceVersion: "444001"
-  uid: 73d2e566-0f72-4097-864c-a49847d0b01d
 spec:
   backoffLimit: 6
   completionMode: NonIndexed
@@ -25,15 +12,13 @@ spec:
   parallelism: 1
   selector:
     matchLabels:
-      batch.kubernetes.io/controller-uid: 73d2e566-0f72-4097-864c-a49847d0b01d
+      app: datahub-elasticsearch-setup-job
   suspend: false
   template:
     metadata:
       creationTimestamp: null
       labels:
-        batch.kubernetes.io/controller-uid: 73d2e566-0f72-4097-864c-a49847d0b01d
-        batch.kubernetes.io/job-name: datahub-elasticsearch-setup-job
-        controller-uid: 73d2e566-0f72-4097-864c-a49847d0b01d
+        app: datahub-elasticsearch-setup-job
         job-name: datahub-elasticsearch-setup-job
     spec:
       containers:
@@ -52,26 +37,17 @@ spec:
           value: "true"
         image: docker.io/acryldata/datahub-elasticsearch-setup:v0.14.1
         imagePullPolicy: IfNotPresent
-        name: elasticsearch-setup-job
-        resources:
-          limits:
-            cpu: 500m
-            memory: 512Mi
-          requests:
-            cpu: 300m
-            memory: 256Mi
+        name: datahub-elasticsearch-setup-job
+        #resources:
+        #  limits:
+        #    cpu: 500m
+        #    memory: 512Mi
+        #  requests:
+        #    cpu: 300m
+        #    memory: 256Mi
         securityContext:
           runAsUser: 1000
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
       restartPolicy: Never
-      schedulerName: default-scheduler
       securityContext:
         fsGroup: 1000
       terminationGracePeriodSeconds: 30
-status:
-  active: 1
-  ready: 0
-  startTime: "2025-02-09T10:31:06Z"
-  uncountedTerminatedPods: {}
