--- a/datahub-app/helm-chart/datahub-system-update-job.yaml
+++ b/datahub-app/helm-chart/datahub-system-update-job.yaml
@@ -1,23 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  annotations:
-    batch.kubernetes.io/job-tracking: ""
-    helm.sh/hook: pre-install,pre-upgrade
-    helm.sh/hook-delete-policy: before-hook-creation
-    helm.sh/hook-weight: "-4"
-  creationTimestamp: "2025-02-09T11:05:12Z"
-  generation: 1
   labels:
-    app.kubernetes.io/instance: datahub
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: datahub
-    app.kubernetes.io/version: 0.14.1
-    helm.sh/chart: datahub-0.4.27
-  name: datahub-system-update
+    app: datahub-system-update-job
+  name: datahub-system-update-job
   namespace: datahub
-  resourceVersion: "449121"
-  uid: ccdc4771-8411-495e-bcc9-75efe777fe2b
 spec:
   backoffLimit: 6
   completionMode: NonIndexed
@@ -25,85 +12,53 @@ spec:
   parallelism: 1
   selector:
     matchLabels:
-      batch.kubernetes.io/controller-uid: ccdc4771-8411-495e-bcc9-75efe777fe2b
+      app: datahub-system-update-job
   suspend: false
   template:
     metadata:
       creationTimestamp: null
       labels:
-        batch.kubernetes.io/controller-uid: ccdc4771-8411-495e-bcc9-75efe777fe2b
-        batch.kubernetes.io/job-name: datahub-system-update
-        controller-uid: ccdc4771-8411-495e-bcc9-75efe777fe2b
-        job-name: datahub-system-update
+        app: datahub-system-update-job
+        job-name: datahub-system-update-job
     spec:
       containers:
       - args:
         - -u
-        - SystemUpdate
+        - SystemUpdateBlocking
         env:
-        - name: DATAHUB_REVISION
-          value: "1"
         - name: ENTITY_REGISTRY_CONFIG_PATH
           value: /datahub/datahub-gms/resources/entity-registry.yml
         - name: DATAHUB_GMS_HOST
-          value: datahub-datahub-gms
+          value: datahub-gms.datahub.svc.cluster.local
         - name: DATAHUB_GMS_PORT
           value: "8080"
         - name: DATAHUB_MAE_CONSUMER_HOST
-          value: datahub-datahub-mae-consumer
+          value: datahub-mae-consumer
         - name: DATAHUB_MAE_CONSUMER_PORT
           value: "9091"
         - name: EBEAN_DATASOURCE_USERNAME
-          value: root
+          value: postgres
         - name: EBEAN_DATASOURCE_PASSWORD
           valueFrom:
             secretKeyRef:
-              key: mysql-root-password
-              name: mysql-secrets
+              key: password
+              name: postgres-secret
         - name: EBEAN_DATASOURCE_HOST
-          value: prerequisites-mysql:3306
+          value: postgres-0.postgres.datahub.svc.cluster.local:5432
         - name: EBEAN_DATASOURCE_URL
-          value: jdbc:mysql://prerequisites-mysql:3306/datahub?verifyServerCertificate=false&useSSL=true&useUnicode=yes&characterEncoding=UTF-8&enabledTLSProtocols=TLSv1.2
+          value: jdbc:postgresql://postgres-0.postgres.datahub.svc.cluster.local:5432/datahub
         - name: EBEAN_DATASOURCE_DRIVER
-          value: com.mysql.cj.jdbc.Driver
+          value: org.postgresql.Driver
         - name: KAFKA_BOOTSTRAP_SERVER
           value: prerequisites-kafka:9092
-        - name: KAFKA_PRODUCER_COMPRESSION_TYPE
-          value: none
-        - name: KAFKA_PRODUCER_MAX_REQUEST_SIZE
-          value: "5242880"
-        - name: KAFKA_CONSUMER_MAX_PARTITION_FETCH_BYTES
-          value: "5242880"
         - name: KAFKA_SCHEMAREGISTRY_URL
-          value: http://datahub-datahub-gms:8080/schema-registry/api/
+          value: http://datahub-gms.datahub.svc.cluster.local:8080/schema-registry/api/
         - name: ELASTICSEARCH_HOST
-          value: elasticsearch-master
+          value: elasticsearch-0.easticsearch.datahub.svc.cluster.local
         - name: ELASTICSEARCH_PORT
           value: "9200"
-        - name: SKIP_ELASTICSEARCH_CHECK
-          value: "false"
-        - name: ELASTICSEARCH_INSECURE
-          value: "false"
-        - name: ELASTICSEARCH_USE_SSL
-          value: "false"
         - name: GRAPH_SERVICE_IMPL
           value: elasticsearch
-        - name: METADATA_CHANGE_EVENT_NAME
-          value: MetadataChangeEvent_v4
-        - name: FAILED_METADATA_CHANGE_EVENT_NAME
-          value: FailedMetadataChangeEvent_v4
-        - name: METADATA_AUDIT_EVENT_NAME
-          value: MetadataAuditEvent_v4
-        - name: METADATA_CHANGE_PROPOSAL_TOPIC_NAME
-          value: MetadataChangeProposal_v1
-        - name: FAILED_METADATA_CHANGE_PROPOSAL_TOPIC_NAME
-          value: FailedMetadataChangeProposal_v1
-        - name: METADATA_CHANGE_LOG_VERSIONED_TOPIC_NAME
-          value: MetadataChangeLog_Versioned_v1
-        - name: METADATA_CHANGE_LOG_TIMESERIES_TOPIC_NAME
-          value: MetadataChangeLog_Timeseries_v1
-        - name: DATAHUB_UPGRADE_HISTORY_TOPIC_NAME
-          value: DataHubUpgradeHistory_v1
         - name: DATAHUB_ANALYTICS_ENABLED
           value: "true"
         - name: SCHEMA_REGISTRY_SYSTEM_UPDATE
@@ -120,26 +75,17 @@ spec:
           value: "true"
         - name: ELASTICSEARCH_INDEX_BUILDER_SETTINGS_REINDEX
           value: "true"
-        image: docker.io/acryldata/datahub-upgrade:v0.14.1
+        image: docker.io/acryldata/datahub-upgrade:v0.15.0.1
         imagePullPolicy: IfNotPresent
         name: datahub-system-update-job
-        resources:
-          limits:
-            cpu: 500m
-            memory: 512Mi
-          requests:
-            cpu: 300m
-            memory: 256Mi
+        #resources:
+        #  limits:
+        #    cpu: 500m
+        #    memory: 2Gi
+        #  requests:
+        #    cpu: 300m
+        #    memory: 2Gi
         securityContext: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
       restartPolicy: Never
-      schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-status:
-  active: 1
-  ready: 0
-  startTime: "2025-02-09T11:05:12Z"
-  uncountedTerminatedPods: {}
