--- a/zookeeper-pv.yaml
+++ b/zookeeper-pv.yaml
@@ -64,3 +64,27 @@ spec:
               operator: In
               values:
                 - w3
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: zookeeper-pv
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: sc-local
+  local:
+    path: /mnt/data/zookeeper
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - w1
+                - w2
+                - w3
